--- a/test.tex
+++ b/test.tex
@@ -610,7 +610,7 @@ While the standard Holographic Principle is limited to using the Plank area, it 
 \subsection{The graviton and photon masses}
 %Consider for simplicity two identical system of mass m in their basic state. They are each characterized by a stationnary wave, which may be seen as the sum of a diverging wave and a converging one: s + s*, with s = exp(if2p(t-r/c)), where f is the proper frequency mc2/ħ. The second system is characterized by the analogous wave r + r*. Supposing that the vacuum is not empty, an hologram is formed: (s + s*)(r + r*), which includes the resonant terms sr* + s*r. So, the simple presence of two systems create such an inhomogeneity in all the Universe.  Now if the first system has an excess of energy, this means it is receiving an excess signal of the form s*. By diffraction on the above hologram it gives rise to s*(sr* + s*r), with resonant term r*. 
 
-The electromagnetic interaction is not really understood, especially the photon concept \cite{Okun}. The main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). This implies directly the non-local hidden variable (Cosmsos), without involving the so-called EPR paradox\cite{Einstein}. Indeed, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. We recall that convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
+The electromagnetic interaction is not really understood, especially the photon concept \cite{Okun}. The main lesson of modern physics is that everything (light \textit{and} matter) propagates by waves (quanta appearing only at the detection). This implies directly the non-local hidden variable (Cosmos), without involving the so-called EPR paradox\cite{Einstein}. Indeed, a coherent wave is represented by a unitary operator: we have shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. We recall that convergent and divergent waves lead to an oscillation\cite{Sanchez1}. This is known as the particle exchange of a massive boson associated with any interaction. Here, it is assumed that the boson has a tachyonic speed $C_1$. Now, the resonance condition is that the wavelengths are identical, by analogy with the Gabor condition\cite{Gabor}. So, for the electron wave and the weak wave:
 \begin{equation}
 \lambdabar_e = \hbar/m_e c = \hbar / m_{gr}C{gr}
 \end{equation}
@@ -629,7 +629,7 @@ calling for further study.
 
 \subsection{The Conservation of Information}
 
-The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an holographic
+The Grandcosmos holographic reduction radius $R^{\prime}$ shows in itself an holographic
 relation with the CMB Wien wavelength $l_{CMB} = hc/kTv $, with $v = 5 (1-e^{-v}) \approx 4.965114245$, and the proton radius, identified to $\lambdabar_e/\sqrt{D} \approx 8.7029\cdot 10^{-16}$ m (0.1 \%, -0.1 \% and 87 ppm):
 \begin{equation}
 e^{a} \approx 4\pi(R^{\prime}/l_{CMB})^{2} \approx (2\pi /3) (r_p/l_P)^3 \approx \sqrt{3} M_B/m_P
