--- a/main.tex
+++ b/main.tex
@@ -1264,7 +1264,7 @@ Poincare 1, 41--54 (2002).
 
 \bibitem{Damour} Damour T. ``The Entropy of Black Hole''. Sem. P. 2, 89--115 (2003).
 
-\bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles''. Phys. Vol. 7, number 5, 595-6.
+\bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles''. Phys. Vol. 7, number 5, 595-6 (1952).
 
 \bibitem{Kotov1} Kotov V.A. and Lyuty V.M. ``The 160-min. periodicity in the optical
 and X-ray observations of extragalactic objects''. Compt. Rend. Acad. Sci.
