--- a/main.tex
+++ b/main.tex
@@ -1246,7 +1246,7 @@ Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
 \bibitem{Bondi} Bondi H. and Gold T. ``the steady-state theory of the expanding universe``. M.N.R.A.S. 108, p. 252. (1948) 
 
-\bibitem{Bondi} Bondi H. and Gold T. ``A new model for the expanding universe``. M.N.R.A.S. 108, p. 272-382. (1948) 
+\bibitem{Hoyle} Hoyle F. ``A new model for the expanding universe``. M.N.R.A.S. 108, p. 272-382. (1948) 
  
 \bibitem{Poincare2} Poincar\'{e} H. ``Dernieres pens\'{e}es``. Flammarion, pp 102-103. (1913) 
 
